--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,4 +12,8 @@
     </div>
 
   </body>
+
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 </html>
