--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,11 +20,27 @@
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
-          {% if node.layout == "page" %}
+          {% if node.layout == "page" and node.album == null and node.pagetype != "album" and node.title != "Music"%}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
+
+      {% comment %}
+        Now add album pages
+      {% endcomment %}
+
+      <a class="sidebar-nav-item" href="/music">Music</a>
+
+      {% assign albums_list = site.pages | sort: "date" | reverse %}
+      {% for node in albums_list %}
+        {% if node.title != null %}
+          {% if node.layout == "page" and node.pagetype == "album" %}
+            <a style="padding-left: 20px" class="sidebar-nav-sub{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
