--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -36,12 +36,12 @@ html {
 }
 @media (min-width: 48em) {
   html {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 @media (min-width: 58em) {
   html {
-    font-size: 20px;
+    font-size: 22px;
   }
 }
 
@@ -98,6 +98,16 @@ a.sidebar-nav-item:focus {
 }
 .sidebar-nav-item.active {
   font-weight: bold;
+}
+.sidebar-nav-item.subitem {
+  font-size: 80%;
+}
+
+@media (min-width: 48em) {
+  .sidebar-nav-item.subitem {
+      font-size: 90%;
+      margin-left: 25px;
+  }
 }
 
 /* Sticky sidebar
@@ -180,7 +190,7 @@ a.sidebar-nav-item:focus {
 
 /* Red */
 .theme-base-08 .sidebar {
-  background-color: #ac4142;
+  background-color: transparent;
 }
 .theme-base-08 .content a,
 .theme-base-08 .related-posts li a:hover {
