Shrink copyright notice

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -45,6 +45,6 @@
 
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p style="font-size: 50%;">&copy; {{ site.time | date: '%Y' }} Pete Peterson Music. All rights reserved.</p>
   </div>
 </div>
