Add social media icons; resolves #4

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,5 @@
 <div class="sidebar">
+    {% include social.html %}
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
