--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 
     <div class="content container">
       {{ content }}
+
+        <p style="font-size: 70%; text-align: center;">&copy; {{ site.time | date: '%Y' }} Pete Peterson. All rights reserved.</p>
     </div>
 
   </body>
