Add padding to the top of copyright notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="content container">
       {{ content }}
 
-        <p style="font-size: 70%; text-align: center;">&copy; {{ site.time | date: '%Y' }} Pete Peterson. All rights reserved.</p>
+        <p style="font-size: 70%; text-align: center; padding-top: 50px;">&copy; {{ site.time | date: '%Y' }} Pete Peterson. All rights reserved.</p>
     </div>
 
   </body>
