Moved scripts to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,8 @@
         <hr>
         <p style="font-size: 70%; text-align: center;">&copy; {{ site.time | date: '%Y' }} Pete Peterson. All rights reserved.</p>
     </div>
-
+    
+    {% include footer.html %}
+    
   </body>
-
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
 </html>
