--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   
-    ga('create', 'UA-00000000-1', 'auto'); //Replace this with your own tracking code
+    ga('create', 'UA-00000000-1', 'auto'); //@TODO: Replace this with your own tracking code
     ga('send', 'pageview');
   </script>
 </head>
