--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,12 +33,18 @@
       <a class="sidebar-nav-item{% if page.url == '/music/' %}  active{% endif %}" href="/music">Music</a>
 
       {% assign albums_list = site.pages | sort: "date" | reverse %}
+      {% assign songs_list = site.pages | sort: "trackno" %}
       {% for node in albums_list %}
         {% if node.title != null %}
           {% if node.layout == "page" and node.pagetype == "album" %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %} subitem" href="{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
+        {% for song in songs_list %}
+          {% if song.album and song.album == node.title and song.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == song.url %} active{% endif %} subsubitem" href="{{ song.url }}">{{ song.title }}</a>
+          {% endif%}
+        {% endfor %}
       {% endfor %}
 
     </nav>
