--- a/_includes/social.html
+++ b/_includes/social.html
@@ -20,7 +20,7 @@
 {% endif %}
 
 {% if site.instagram_username %}
-    <a href="http://instagram.com/{{ site.instagram_username }}">
+    <a href="https://instagram.com/{{ site.instagram_username }}">
       <i class="fa fa-instagram"></i>
     </a>
 {% endif %}
@@ -44,7 +44,7 @@
 {% endif %}
 
 {% if site.bandcamp_username %}
-    <a href="http://{{ site.bandcamp_username }}.bandcamp.com">
+    <a href="https://{{ site.bandcamp_username }}.bandcamp.com">
       <i class="fa fa-bandcamp"></i>bc
     </a>
 {% endif %}
