--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,4 @@
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-<script type="text/javascript" src="{{ site.baseurl }}public/js/main.js"></script>
+<script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/public/js/main.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/public/js/sidebar.js"></script>
