--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,44 +1,50 @@
 <!-- Social media icons -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 {% if site.twitter_username %}
-    <a href="https://twitter.com/{{ site.twitter_username }}">
-      <i class="fa fa-twitter"></i>
-    </a>
+<a href="https://twitter.com/{{ site.twitter_username }}">
+  <i class="fa-brands fa-twitter"></i>
+</a>
+{% endif %}
+
+{% if site.threads_username %}
+<a href="https://threads.net/@{{ site.threads_username }}">
+  <i class="fa-brands fa-threads"></i>
+</a>
 {% endif %}
 
 {% if site.github_username %}
-    <a href="https://github.com/{{ site.github_username }}">
-      <i class="fa fa-github"></i>
-    </a>
+<a href="https://github.com/{{ site.github_username }}">
+  <i class="fa-brands fa-github"></i>
+</a>
 {% endif %}
 
 {% if site.youtube_username %}
-    <a href="https://youtube.com/{{ site.youtube_username }}">
-      <i class="fa fa-youtube"></i>
-    </a>
+<a href="https://youtube.com/{{ site.youtube_username }}">
+  <i class="fa-brands fa-youtube"></i>
+</a>
 {% endif %}
 
 {% if site.instagram_username %}
-    <a href="https://instagram.com/{{ site.instagram_username }}">
-      <i class="fa fa-instagram"></i>
-    </a>
+<a href="https://instagram.com/{{ site.instagram_username }}">
+  <i class="fa-brands fa-instagram"></i>
+</a>
 {% endif %}
 
 {% if site.facebook_username %}
-    <a href="https://facebook.com/{{ site.facebook_username }}">
-      <i class="fa fa-facebook"></i>
-    </a>
+<a href="https://facebook.com/{{ site.facebook_username }}">
+  <i class="fa-brands fa-facebook"></i>
+</a>
 {% endif %}
 
 {% if site.soundcloud_username %}
-    <a href="https://soundcloud.com/{{ site.soundcloud_username }}">
-      <i class="fa fa-soundcloud"></i>
-    </a>
+<a href="https://soundcloud.com/{{ site.soundcloud_username }}">
+  <i class="fa-brands fa-soundcloud"></i>
+</a>
 {% endif %}
 
 {% if site.bandcamp_username %}
-    <a href="https://{{ site.bandcamp_username }}.bandcamp.com">
-      <i class="fa fa-bandcamp"></i>bc
-    </a>
+<a href="https://{{ site.bandcamp_username }}.bandcamp.com">
+  <i class="fa-brands fa-bandcamp"></i>bc
+</a>
 {% endif %}
