Make all social links open blank tabs

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,49 +2,49 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 {% if site.twitter_username %}
-<a href="https://twitter.com/{{ site.twitter_username }}">
+<a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-twitter"></i>
 </a>
 {% endif %}
 
 {% if site.threads_username %}
-<a href="https://threads.net/@{{ site.threads_username }}">
+<a href="https://threads.net/@{{ site.threads_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-threads"></i>
 </a>
 {% endif %}
 
 {% if site.github_username %}
-<a href="https://github.com/{{ site.github_username }}">
+<a href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-github"></i>
 </a>
 {% endif %}
 
 {% if site.youtube_username %}
-<a href="https://youtube.com/{{ site.youtube_username }}">
+<a href="https://youtube.com/{{ site.youtube_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-youtube"></i>
 </a>
 {% endif %}
 
 {% if site.instagram_username %}
-<a href="https://instagram.com/{{ site.instagram_username }}">
+<a href="https://instagram.com/{{ site.instagram_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-instagram"></i>
 </a>
 {% endif %}
 
 {% if site.facebook_username %}
-<a href="https://facebook.com/{{ site.facebook_username }}">
+<a href="https://facebook.com/{{ site.facebook_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-facebook"></i>
 </a>
 {% endif %}
 
 {% if site.soundcloud_username %}
-<a href="https://soundcloud.com/{{ site.soundcloud_username }}">
+<a href="https://soundcloud.com/{{ site.soundcloud_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-soundcloud"></i>
 </a>
 {% endif %}
 
 {% if site.bandcamp_username %}
-<a href="https://{{ site.bandcamp_username }}.bandcamp.com">
+<a href="https://{{ site.bandcamp_username }}.bandcamp.com" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-bandcamp"></i>bc
 </a>
 {% endif %}
