--- a/_includes/social.html
+++ b/_includes/social.html
@@ -8,7 +8,7 @@
 {% endif %}
 
 {% if site.threads_username %}
-<a href="https://threads.net/@{{ site.threads_username }}" target="_blank" rel="noopener noreferrer">
+<a href="https://threads.com/@{{ site.threads_username }}" target="_blank" rel="noopener noreferrer">
   <i class="fa-brands fa-threads"></i>
 </a>
 {% endif %}
